@@ -1,3 +1,12 @@
+Tue Nov 13 00:12:05 CET 2007  John Tytgat  <John.Tytgat@aaug.net>
+
+	* riscos/chunkid01.s: End pointer of chunk branch table should point
+	after the "MOV PC, #0" section and not after the 2nd part of the
+	branch table; added .size attribute.
+	* riscos/chunkid02.s: Likewise.
+	* riscos/chunkid04.s: Likewise.
+	* riscos/chunkid05.s: Likewise.
+
 Sun Nov 11 01:08:20 CET 2007  John Tytgat  <John.Tytgat@aaug.net>
 
 	* incl-local/internal/asm_dec.s: Added license terms.
